# SWMM-MCP-PUB

./: LICENSE  README.md  prompts.py  pyproject.toml  server.py  test.py
apps/: upload.html  view.html
models/: example_model.inp
utils/: ModelManager.py  NpEncoder.py  Visualization.py  design_storm.py  logger.py  model_manager.py  swmm_plotting.py  visualization_server.py
